# web-python-term-project

./: BUGFIX_v2.2.1.md  CHANGELOG.md  GUIDE.md  HOTFIX.md  README.md  UPDATE_v2.3.md  pyproject.toml
assets/: account.json  backtest_history.json  price_sample.csv  strategy_config.json  trades.csv
src/mock_investing/: account.py  exec_engine.py  feed.py  history.py  indicators.py  main.py  market_data.py  models.py  rules.py  storage.py  strategies.py  strategy_config.py  strategy_menu.py  visualization.py
